--- a/src/components/Testimonials.module.css
+++ b/src/components/Testimonials.module.css
@@ -100,4 +100,9 @@
     font-size: 2.2rem;
     margin-bottom: 2rem;
   }
+  
+  .marqueeWrapper {
+    mask-image: none;
+    -webkit-mask-image: none;
+  }
 }
